--- a/PDV.dproj
+++ b/PDV.dproj
@@ -85,6 +85,9 @@
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
+        <Icon_MainIcon>PDV_Icon.ico</Icon_MainIcon>
+        <UWP_DelphiLogo44>..\..\..\..\..\Desktop\Curso Delphi\Arquivos\Imagens\Icones do Sistema\icone 44x44.png</UWP_DelphiLogo44>
+        <UWP_DelphiLogo150>..\..\..\..\..\Desktop\Curso Delphi\Arquivos\Imagens\Icones do Sistema\iconfinder_14_3319630.png</UWP_DelphiLogo150>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
@@ -155,6 +158,20 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
+                <DeployFile LocalName="..\..\..\..\..\Desktop\Curso Delphi\Arquivos\Imagens\Icones do Sistema\iconfinder_14_3319630.png" Configuration="Debug" Class="UWP_DelphiLogo150">
+                    <Platform Name="Win32">
+                        <RemoteDir>Assets\</RemoteDir>
+                        <RemoteName>Logo150x150.png</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="..\..\..\..\..\Desktop\Curso Delphi\Arquivos\Imagens\Icones do Sistema\icone 44x44.png" Configuration="Debug" Class="UWP_DelphiLogo44">
+                    <Platform Name="Win32">
+                        <RemoteDir>Assets\</RemoteDir>
+                        <RemoteName>Logo44x44.png</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="Win32\Debug\PDV.exe" Configuration="Debug" Class="ProjectOutput">
                     <Platform Name="Win32">
                         <RemoteName>PDV.exe</RemoteName>
